--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,10 @@ dist-ssr
 *.sln
 *.sw?
 
-# Google stuff
-**/manifest.json
+# Enviroment variable
+.env
 
 # Misc
 pnpm-lock.yaml
+# Uncomment the following if you are storing raw project specific key or ID strings in your manifest files
+# **/manifest.json
