--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,9 +16,9 @@
         "storage",
         "identity"
     ],
-    "key": "%EXTENSION_PUBLIC_KEY%",
+    "key": "${EXTENSION_PUBLIC_KEY}",
     "oauth2": {
-        "client_id": "%OAUTH2_CLIENT_ID%",
+        "client_id": "${OAUTH2_CLIENT_ID}",
         "scopes": [
             "https://www.googleapis.com/auth/drive.file"
         ]
